大更新，具体请看详情，可能存在些许bug,可以在issue中提出
1. 解决token续签问题
2. 修复错题本查数据库会遇到only_full_group_by 问题
3. 添加老师可以加入班级并管理班级功能，一个学生对应一个班级，一个班级对应多个老师
4. 修复公告新增富文本只有一行的情况，添加是否公开所有班级选项，添加权限可以公开1个或多个班级
5. 重新上传sql文件数据库添加班级用户关联表和公告班级关联表，公告添加是否公开字段
6. 解决无法退出班级问题，添加了退出班级按钮
7. 去除公告缓存redis功能